# rtseis

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  LICENSE  README.md  azure-pipelines.yml
.circleci/: config.yml
CMakeModules/: FindIPPConfig.cmake  FindMKLConfig.cmake
clang_build/: envelopeAnalytic.hpp
cmake/: FindIPPConfig.cmake  FindMKLConfig.cmake  RTSeis.cmake.in  RTSeisConfig.cmake.in
doc/: INSTALL.md  overview.dox
docs/: CMakeLists.txt  Doxyfile.gh  Doxyfile.in  rtseis_layout.xml
docs/manual/: Manual.dox  Overview.dox
include/: CMakeLists.txt
include/private/: convolve.hpp  doubleDataContainer.hpp  pad.hpp  throw.hpp  version.hpp.in
include/rtseis/: CMakeLists.txt  config.h.in  demean.hpp  detrend.hpp  enums.h  enums.hpp  ippsHelper.h  log.h  modules.h  modules.hpp  taper.hpp  vector.hpp  verbosity.h  version.hpp  version.hpp.in  waveform.hpp  window.hpp
include/rtseis/amplitude/: enums.hpp  tauP.hpp  tauPParameters.hpp  timeDomainWoodAnderson.hpp  timeDomainWoodAndersonParameters.hpp
include/rtseis/deconvolution/: instrumentResponse.hpp  transfer.hpp
include/rtseis/deconvolution/instruments/: woodAnderson.hpp
include/rtseis/filterDesign/: analogPrototype.hpp  enums.hpp  filterDesigner.hpp  fir.hpp  iir.hpp  response.hpp
include/rtseis/filterImplementations/: decimate.hpp  detrend.hpp  downsample.hpp  enums.hpp  firFilter.hpp  iirFilter.hpp  iiriirFilter.hpp  medianFilter.hpp  multiRateFIRFilter.hpp  sosFilter.hpp  taper.hpp
include/rtseis/filterRepresentations/: ba.hpp  fir.hpp  sos.hpp  zpk.hpp
include/rtseis/modules/: classicSTALTA.hpp  demean.h  demean.hpp  detrend.h  detrend.hpp  fir.hpp  iir.hpp  oneBitNormalization.hpp
include/rtseis/postProcessing/singleChannel/: demean.hpp  detrend.hpp  envelope.hpp  taper.hpp  waveform.hpp
include/rtseis/private/: throw.hpp
include/rtseis/rotate/: utilities.hpp
include/rtseis/system/: system.hpp
include/rtseis/transforms/: continuousWavelet.hpp  dft.hpp  dftRealToComplex.hpp  enums.hpp  envelope.hpp  firEnvelope.hpp  hilbert.hpp  slidingWindowRealDFT.hpp  slidingWindowRealDFTParameters.hpp  spectrogram.hpp  utilities.hpp  welch.hpp
include/rtseis/transforms/wavelets/: iwavelets.hpp  morlet.hpp  ricker.hpp
include/rtseis/trigger/: waterLevel.hpp
include/rtseis/utilities/: analogPrototype.hpp  ba.hpp  convolve.hpp  design.hpp  filters.hpp  iir.hpp  ipps.hpp  polynomial.hpp  response.hpp  sos.hpp  transforms.hpp  vectorMath.hpp  windowFunctions.hpp  zpk.hpp
include/rtseis/utilities/characteristicFunction/: carlSTALTA.hpp  classicSTALTA.hpp  iirKurtosis.hpp
include/rtseis/utilities/deconvolution/: instrumentResponse.hpp  transfer.hpp
include/rtseis/utilities/design/: analogPrototype.hpp  enums.hpp  filterDesigner.hpp  fir.hpp  iir.hpp  response.hpp
include/rtseis/utilities/filterDesign/: analogPrototype.hpp  enums.hpp  filterDesigner.hpp  fir.hpp  iir.hpp  response.hpp
include/rtseis/utilities/filterImplementations/: decimate.hpp  detrend.hpp  downsample.hpp  enums.hpp  filters.hpp  firFilter.hpp  iirFilter.hpp  iiriirFilter.hpp  medianFilter.hpp  multiRateFIRFilter.hpp  sosFilter.hpp
include/rtseis/utilities/filterRepresentations/: ba.hpp  fir.hpp  sos.hpp  zpk.hpp
include/rtseis/utilities/interpolation/: cubicSpline.hpp  interpolate.hpp  linear.hpp  weightedAverageSlopes.hpp
include/rtseis/utilities/math/: convolve.hpp  cubicSpline.hpp  interpolate.hpp  polynomial.hpp  vectorMath.hpp
include/rtseis/utilities/normalization/: minMax.hpp  signBit.hpp  winsorize.hpp  zscore.hpp
include/rtseis/utilities/polarization/: eigenPolarizer.hpp  svdPolarizer.hpp
include/rtseis/utilities/rotate/: utilities.hpp
include/rtseis/utilities/transforms/: continuousWavelet.hpp  dft.hpp  dftRealToComplex.hpp  enums.hpp  envelope.hpp  envelopeAnalytic.hpp  firEnvelope.hpp  hilbert.hpp  slidingWindowRealDFT.hpp  slidingWindowRealDFTParameters.hpp  spectrogram.hpp  transforms.hpp  utilities.hpp  welch.hpp
include/rtseis/utilities/transforms/wavelets/: derivativeOfGaussian.hpp  iwavelets.hpp  morlet.hpp
include/rtseis/utilities/trigger/: waterLevel.hpp
include/rtseis/utils/: ba.h  ba.hpp  convolve.hpp  design.h  design.hpp  filters.hpp  ipps.hpp  polynomial.h  polynomial.hpp  transforms.hpp  windowFunctions.hpp  zpk.h  zpk.hpp
python/: benchmarks.py  filterRepresentations.cpp  modules.hpp  pyrtseis.cpp  transforms.cpp  waveform.cpp  wrap.hpp
src/: demean.cpp  detrend.cpp  system.cpp  taper.cpp  vector.cpp  window.cpp
src/amplitude/: tauP.cpp  tauPParameters.cpp  timeDomainWoodAnderson.cpp  timeDomainWoodAndersonParameters.cpp
src/deconvolution/: instrumentResponse.cpp  transfer.cpp  woodAnderson.cpp
src/filterDesign/: analogProtype.cpp  bessel.py  filterDesigner.cpp  fir.cpp  iir.cpp  response.cpp  windowFunctions.cpp  windowFunctions.hpp
src/filterImplementations/: decimate.cpp  detrend.cpp  downsample.cpp  firFilter.cpp  iirFilter.cpp  iiriirFilter.cpp  medianFilter.cpp  multiRateFIRFilter.cpp  sos.cpp  taper.cpp
src/filterRepresentations/: ba.cpp  fir.cpp  sos.cpp  zpk.cpp
src/ipps/: dft.c  downsample.c  downsample.cpp  firfilter.c  iirfilter.c  medianFilter.c
src/modules/: classicSTALTA.cpp  demean.cpp  detrend.cpp  fir.cpp  iir.cpp  oneBitNormalization.cpp
src/rotate/: utilities.cpp
src/transforms/: continuousWavelet.cpp  dft.cpp  dftRealToComplex.cpp  dftUtils.cpp  envelope.cpp  firEnvelope.cpp  hilbert.cpp  slidingWindowRealDFT.cpp  slidingWindowRealDFTParameters.cpp  spectrogram.cpp  welch.cpp
src/trigger/: waterLevel.cpp
src/utilities/: verbosity.c  version.cpp  version.cpp.in
src/utils/: iir.cpp  ipps.cpp
testing/data/: UU.SPU.HHN.01.txt  UU.TMU.ENN.01.txt  classicSTALTA.py  classicSTALTA_ref.txt  cubicSpline.py  cubicSplineInterpolation.txt  cwtExample.py  decimate.py  decimate_10.txt  decimate_2.txt  decimate_3.txt  decimate_4.txt  decimate_5.txt  decimate_6.txt  decimate_7.txt  decimate_8.txt  decimate_9.txt  envelopeChirpReference.txt  envelopeChirpReference300.txt  envelopeChirpReference301.txt  envelopeTest.m  firResampleReference.txt  (+28 more)
(+141 files in other folders)
